--- a/templates/base.html
+++ b/templates/base.html
@@ -18,16 +18,19 @@
             <a href="">登入</a>
         </div>
     </div>
-
+    <div style="clear:both"></div>
     <div class="line"></div>
 
     <nav>
-        <a href="">New Arrival</a>
-        <a href="">Hot</a>
-        <a href="">On Sale</a>
-        <a href="">Top</a>
-        <a href="">Paints</a>
+        <ul>
+        <li style="width:150px"><a href="">New Arrival</a></li>
+        <li style="width:110px"><a href="">Hot</a></li>
+        <li style="width:125px"><a href="">On Sale</a></li>
+        <li style="width:120px"><a href="">Top</a></li>
+        <li style="width:120px"><a href="">Paints</a></li>
+        </ul>
     </nav>
+    <div style="clear:both"></div>
     <h2>{% block h2 %} {% endblock %}</h2>
     {% block content %}{% endblock %}
 
