--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="user_login">
-            <a href="">登入</a>
+            <a href="">Login</a>
         </div>
     </div>
     <div style="clear:both"></div>
