--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
 
 
     <link rel="stylesheet" href="/static/css/DSdogs.css">
+<!--    <link rel="stylesheet" href="/DSdogs/static/css/DSdogs.css"> -->
 
 </head>
 <body>
@@ -29,7 +30,9 @@
 
         <div class="user_login">
             <a href="">Login</a>
+            <a href="/cart/">Cart({{cart_items_count}})</a>
         </div>
+
     </div>
     <div style="clear:both"></div>
     <div class="line"></div>
