--- a/products/templates/product_info.html
+++ b/products/templates/product_info.html
@@ -13,7 +13,21 @@
             Price <span>${{p.price}}</span>
         </div>
 
-        <form action="../cart/" method="post"> {% csrf_token %}
+        <form action="../" method="post"> {% csrf_token %}
+            quantity
+            <select name="select_quantiyt">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select>
+
             <div class="add_to_cart">
             <input type="submit" value="add to cart">
             <input type="hidden" name="product_id" value="{{p.id}}">
