--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,10 @@
 {% block content %}
 
         <div class="container-fluid">
-            <h1>TEST</h1>
+            {% if product_name %}
+            <h2>Successful add {{product_name}} to cart</h2>
+            {% endif %}
+
             <div class="row">
                 {% for p in products %}
                 <div class="col-md-3">
