--- a/products/templates/product_info.html
+++ b/products/templates/product_info.html
@@ -13,9 +13,9 @@
             Price <span>${{p.price}}</span>
         </div>
 
-        <form action="../" method="post"> {% csrf_token %}
+        <form action="/" method="post"> {% csrf_token %}
             quantity
-            <select name="select_quantiyt">
+            <select name="select_quantity">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
