--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,15 @@
         </div>
 
         <div class="user_login">
-            <a href="">Login</a>
+
+            {% if request.user.is_authenticated %}
+                Hi, {{ request.user }}　|
+                <a href="/accounts/logout">Logout |</a>
+            {% else %}
+                <a href="/accounts/login">Login |</a>
+                <a href="/register">Register |</a>
+            {% endif %}
+
             <a href="/cart/">Cart({{cart_items_count}})</a>
         </div>
 
