add user customerUser admin

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                 <a href="/accounts/logout">Logout |</a>
             {% else %}
                 <a href="/accounts/login">Login |</a>
-                <a href="/register">Register |</a>
+                <a href="/accounts/register">Register |</a>
             {% endif %}
 
             <a href="/cart/">Cart({{cart_items_count}})</a>
